--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,18 @@
       name="description"
       content="Web site created using create-react-app"
     />
+
+    <?xml version="1.0" encoding="UTF-8"?>
+    <configuration>
+      <system.webServer>
+        <staticContent>
+          <mimeMap fileExtension=".json" mimeType="application/json" />
+        </staticContent>
+        <modules runAllManagedModulesForAllRequests="true" />
+      </system.webServer>
+    </configuration>
+
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
